k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docapp-service
  namespace: doctor-system
spec:
  type: ClusterIP
  selector:
    app: docapp
  ports:
    - port: 80
      targetPort: 8000
